test/libsolidity/syntaxTests/nameAndTypeResolution/584_abi_decode_with_tuple_of_other_than_types.sol
contract C {
    function f() pure public { abi.decode("", (0)); }
}
// ----
// TypeError 1039: (60-61='0'): Argument has to be a type name.
